# broilerplate

./: .gitignore  .pre-commit-config.yaml  README.md  pyrightconfig.json  requirements-dev.txt  setup.cfg  tox.ini
src/broilerplate/: broilerplate.py
tests/: broilerplate_test.py  test_broil.py
