[metadata]
name = broilerplate
version = 0.1.0
description = A tool to automate running boilerplate python code in scripts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scwfri/broilerplate
author = scwfri
author_email = s@scwfri.net
license = MIT
license_file = LICENSE

[options]
packages = find:
